# advanced_cpp_course

./: .gitignore  AdvancedCPP.pro  AdvancedCPP.sln  AdvancedCPP.vcxproj  AdvancedCPP.vcxproj.filters  AdvancedCppICTerra2018.sln  AdvancedCppICTerra2018.vcxproj  AdvancedCppICTerra2018.vcxproj.filters  CMakeLists.txt  STMAdvancedCPP.sln  STMAdvancedCPP.vcxproj  STMAdvancedCPP.vcxproj.filters  main.cpp
src/: CMakeLists.txt
src/0-Types/: number.hpp
src/1-Inheritance/: diamond_problem.cpp  diamond_problem.hpp  friend_usage.cpp  friend_usage.hpp  inheritance_usage.cpp  virtual_destructor.cpp  virtual_destructor.hpp
src/1-OperatorOverload/: op_overload_override_example.hpp
src/2-Inheritance/: friend_usage.hpp  inheritance_usage.hpp  template_inheritance_usage.hpp  virtual_destructor.hpp
src/2-SmartPointer/: CMakeLists.txt  malloc_usage.cpp  malloc_usage.hpp  shared_pointer.cpp  shared_pointer.hpp  smart_pointer.cpp  smart_pointer.hpp  weak_pointer.cpp  weak_pointer.hpp
src/2-SmartPointer/bonus/: bonus_old_style_smart_pointer.cpp  bonus_old_style_smart_pointer.hpp  handle.h  shared.cpp  shared.h
src/3-SmartPointer/: cpu_cache_misses.hpp  malloc_usage.hpp  shared_pointer.hpp  smart_pointer.hpp  weak_pointer.hpp
src/3-SmartPointer/bonus/: bonus_old_style_smart_pointer.hpp  (+1 more)
src/3-Static/: static_usage.cpp  static_usage.hpp
src/4-CPUArchitecture/: branch_prediction.cpp  branch_prediction.hpp  cpu_cache_misses.cpp  cpu_cache_misses.hpp  false_sharing.cpp  false_sharing.hpp  packed_data_access.cpp  packed_data_access.hpp
src/4-RefUsage/: copy_elision_usage.hpp  ref_usage_example.hpp
src/5-Templates/: template_container.cpp  template_container.hpp  template_crtp_usage.cpp  template_crtp_usage.hpp  template_decltype.cpp  template_decltype.hpp  template_inheritance_usage.cpp  template_inheritance_usage.hpp  template_mixin.cpp  template_mixin.hpp  template_policies.cpp  template_policies.hpp  template_static_assert.cpp  template_static_assert.hpp  template_staticpolymorphism.cpp  template_staticpolymorphism.hpp  template_traits.cpp  template_traits.hpp
src/6-Exceptions/: exception_usage.cpp  exception_usage.hpp
src/6-Templates/: template_container.hpp  template_decltype.hpp  template_mixin.hpp  template_policies.hpp  template_static_assert.hpp  template_staticpolymorphism.hpp
src/7-CustomComparators/: CMakeLists.txt  custom_comparator.cpp  custom_comparator.hpp
src/7-Exceptions/: exception_usage.hpp
src/8-Cpp11Features/: CMakeLists.txt  async_usage.cpp  async_usage.hpp
src/8-CustomComparators/: custom_comparator.hpp
src/9-AsyncFuture/: async_usage.hpp
(+5 files in other folders)
