# Add source to this project's executable.
# add_executable (STMAdvancedCPP "STMAdvancedCPP.cpp" "STMAdvancedCPP.h")

# TODO: Add tests and install targets if needed.
add_subdirectory("1-Inheritance")
add_subdirectory("2-SmartPointer")
add_subdirectory("3-Static")
add_subdirectory("4-CPUArchitecture")
add_subdirectory("5-Templates")
add_subdirectory("6-Exceptions")
add_subdirectory("7-CustomComparators")
add_subdirectory("8-Cpp11Features")
